# present-ideas

./: .gitignore  .yo-rc.json  README.md  build_on_server.sh  jest.config.ts  mypy.ini  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js  webpack.config.cjs  webpack.config.js
.github/workflows/: npm-test.yml
jest/: setup-env.js  utils.ts
jest/mock_server/: handlers.ts
mock_server/: handlers.ts
present_ideas/: manage.py
present_ideas/present_ideas/: settings.py  urls.py  utils.py  views.py  wsgi.py
present_ideas/present_ideas/static/: index.js  routes.js  snowflake.css  snowflake.css.map  snowflake.js  snowflake.scss
present_ideas/present_ideas/static/components/: LandingPage.vue  LoadingIndicator.vue  MyListPage.vue  PeoplePicker.vue  PresentIdeaCard.vue  PresentIdeaForm.vue  PresentIdeaFormCard.vue  TopNav.vue
present_ideas/present_ideas/static/components/__tests__/: LoadingIndicator.test.ts  PeoplePicker.test.ts  PresentIdeaCard.test.ts  PresentIdeaFormCard.test.ts  TopNav.test.ts
present_ideas/present_ideas/static/layout/: Layout.vue
present_ideas/present_ideas/static/layout/__tests__/: Layout.test.ts
present_ideas/present_ideas/static/pages/: BlahPage.vue  LandingPage.vue  ListPage.vue  MyListPage.vue  TheirListPage.vue
present_ideas/present_ideas/static/router/: index.js  routes.js
present_ideas/present_ideas/static/store/: index.js
present_ideas/present_ideas/templates/: base.html  delete.html  index.html  list.html  thing.html  what_do.html  who.html
present_ideas/sheets/: spreadsheet.py
(+23 files in other folders)
