[tool.poetry]
name = "present-ideas"
version = "0.1.0"
description = ""
authors = ["Joel <no1joel@btinternet.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = "^1.7"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
gspread = "^3.1"
oauth2client = "^4.1"
django = "^2.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pydocstyle = "^4.0"
mypy = "^0.740.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
