[tool.poetry]
name = "present-ideas"
version = "0.1.0"
description = ""
authors = ["Joel <no1joel@btinternet.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
gspread = "^3.1"
oauth2client = "^4.1"
django-vite = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"
black = "^22.10.0"
pydocstyle = "^6.1.1"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
